# gemini-vertex-search-agent

./: .dockerignore  .gitignore  Dockerfile  HACKATHON.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: dashboard.py
scripts/: build_demo_video.py  build_real_demo.py  make_cover.py  record_real_demo.py  smoke.py
src/gemini_vertex_search_agent/: __init__.py  agent.py  mcp_stub.py  runner.py
tests/: test_agent_build.py  test_mcp_stub.py
